--- a/src/ComicBookGallery/Views/Home/Detail.cshtml
+++ b/src/ComicBookGallery/Views/Home/Detail.cshtml
@@ -1,18 +1,32 @@
-﻿@{ 
-    Layout = null;
+﻿@model ComicBookGallery.Models.ComicBook
+
+@{ 
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = Model.DisplayText;
 }
 
-<h1>@ViewBag.title</h1>
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h5><label>Series Title:</label> @Model.SeriesTitle</h5>
+            <h5><label>Issue #:</label> @Model.IssueNumber</h5>
+            <h5><label>Favorite:</label> @(Model.Favorite ? "Yes" : "No")</h5>
+            @if (Model.Artists.Length > 0) {
+                <h5>Artists:</h5>
+                <ul>
+                    @foreach (var Artist in Model.Artists) { 
+                        <li>@Artist.Role : @Artist.Name</li>
 
-<h3>@ViewBag.description</h3>
-
-<p>@Html.Raw(ViewBag.testString)</p>
-
-<ul>
-    @foreach (var charater in ViewBag.characters) { 
-        <li>
-            @charater 
-        </li>
-    }
-</ul>
+                    }
+                </ul>
+            }
+        </div>
+        <h5>Description</h5>
+        <div>@Html.Raw(Model.DescriptionHTML)</div> 
+    </div>
+    <div class="col-md-6">
+        <img src="/Images/@Model.CoverImageFileName" 
+            alt="@Model.DisplayText" class="img-responsive" />
+    </div>
+</div>
 
